# Claude-9-Q-hack

./: .gitignore  README.md  main.py  picnic_data.db  pyproject.toml
backend/: __init__.py  backend.py  config.py  db.py  main.py  voice_agent.py
backend/services/: __init__.py  basket_recommender.py  dietary_filters.py  match_dishes.py  openai_client.py  recurring_items.py  shopping_basket.py  shopping_from_meal_plan.py  voice_agent.py
backend/voice/: __init__.py  llm_agent.py  run_voice_cli.py  voice.py  voice_agent.py
data/: RELATIONSHIPS.md  article_allergy_labels.csv  article_tags.csv  articles.csv  build_sqlite_db.py  customer_preferences.csv  customers.csv  deliveries.csv  fcs.csv  hubs.csv  ingredient_articles.csv  ingredients.csv  order_recipes.csv  orderline_ids.csv  orderlines.csv  orders.csv  picnic_data.db  preference_tags.csv  recipe_ingredients.csv  recipe_instructions.csv  recipe_tags.csv  recipes.csv  stock.csv
docs/: basket-recsys-design.md
frontend/: app.js  frontend.py  index.html  styles.css  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AIPanel.tsx  AiSuggestionsSection.tsx  BottomNav.tsx  ChatBox.tsx  CheckoutBar.tsx  CheckoutDrawer.tsx  (+21 more)
scripts/: build_sqlite_db.py  gen_recipe_meal_tags.py  match_dishes.py  openai_test.py  recommend_weekly_basket.py  set_catalog_skip_worktree.ps1  shopping_basket.py  test_basket_recommender.py  test_shopping_from_meals.py  unset_catalog_skip_worktree.ps1
src/: __init__.py  main.py
tests/: test_main.py
voice/: app.py  voice.py
voice/conversations/: log_20260408_185944.txt
(+14 files in other folders)
