[project]
name = "claude-9-q-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pyaudio>=0.2.14",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn",
    "speechrecognition>=3.16.0",
    "anthropic>=0.92.0",
    "flask>=3.1.3",
]
