[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-9-q-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
exclude = ["assets*", "data*", "frontend*", "scripts*"]
